# mysneak-scraper

./: README.md  inserts.sql  pyproject.toml
mysneak_scraper/: main.py
