[tool.poetry]
name = "mysneak-scraper"
version = "0.1.0"
description = ""
authors = ["bschulz <moin@bschulz.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
bs4 = "^0.0.2"
lxml = "^5.3.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
